Fixed items alignments search components

--- a/coders-cookout/src/components/SearchPage.css
+++ b/coders-cookout/src/components/SearchPage.css
@@ -13,14 +13,24 @@ button {
   flex-wrap: wrap;
   width: 10%;
   margin: 0 auto;
+  align-items: center;
 }
 
-img {
-  width: 17rem;
-  height: 17rem;
-  justify-content: space-between;
+.recipeImage {
+  width: 25rem;
+  height: 25rem;
+  margin: 3em 0 0 20em;
 }
 
-hr {
-  border: 3px solid #707070;
+.recipeH3 {
+  text-align: center;
+}
+
+.recipeInput {
+  margin-left: 32em;
+  margin-top: 3em;
+  height: 2.5em;
+}
+.recipeButton {
+  height: 2.5em;
 }
